# VascuSynth

Src/: CMakeLists.txt  CMakeLists.txt~  Documentation.txt  VascularTree.cpp
Src/ParameterFiles/: testNoise.txt
