cmake_minimum_required (VERSION 2.8)
project (VascuSynth)
find_package (ITK)
IF(ITK_FOUND)
	INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)
add_executable (VascuSynth VascuSynth.cpp SupplyMap.cpp OxygenationMap.cpp NodeTable.cpp VascularTree.cpp TreeDrawer.cpp)
target_link_libraries (VascuSynth ${ITK_LIBRARIES})
